# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 May 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.7.0.0_alpha11.ebuild, +sun-jdk-1.7.0.0_alpha12.ebuild:
  1.7 snapshot bump

  04 May 2007; Vlastimil Babka <caster@gentoo.org>
  sun-jdk-1.6.0.02_alpha02.ebuild, sun-jdk-1.7.0.0_alpha11.ebuild:
  Fix src_unpack() to workaround bash bug triggered by paludis, bug #176979 by
  Bo Ørsted Andresen <bo.andresen@zlin.dk>.

  12 Apr 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.02_alpha01.ebuild, +sun-jdk-1.6.0.02_alpha02.ebuild:
  Bump of 6u2 snapshot. Javadoc fixed, hurray.

  11 Apr 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.7.0.0_alpha10.ebuild, +sun-jdk-1.7.0.0_alpha11.ebuild:
  Bump to new 1.7 snapshot.

  31 Mar 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.1_alpha03.ebuild, -files/sun-jdk-1.6.0.1.env,
  +sun-jdk-1.6.0.02_alpha01.ebuild, +files/sun-jdk-1.6.0.02.env,
  -sun-jdk-1.7.0.0_alpha09.ebuild, +sun-jdk-1.7.0.0_alpha10.ebuild:
  Bump 1.6 to first 6u2 snapshot, and new 1.7 snapshot.

  02 Mar 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.7.0.0_alpha07.ebuild, +sun-jdk-1.7.0.0_alpha09.ebuild,
  +wget-log:
  Snapshot bump.

  11 Feb 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.7.0.0_alpha06.ebuild, +sun-jdk-1.7.0.0_alpha07.ebuild:
  Bump to new snapshot.

  23 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.1_alpha02.ebuild, +sun-jdk-1.6.0.1_alpha03.ebuild,
  +files/sun-jdk-1.6.0.1.env, -files/sun-jdk-1.6.env:
  New 1.6.0.1 snapshot. Moved to 1.6.0.1 SLOT to allow side-by-side
  installation with 1.6 from portage tree. They still haven't fixed javadoc :(

  19 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
  -sun-jdk-1.7.0.0_alpha05.ebuild, +sun-jdk-1.7.0.0_alpha06.ebuild:
  Bump to new snapshot.

  16 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  sun-jdk-1.6.0.1_alpha02.ebuild:
  Fix unpack
