@@ -4,6 +4,6 @@ DIST jdk-6u2-ea-bin-b02-linux-amd64-12_apr_2007.bin 51861083 RMD160 4dc1e2ffc952
 DIST jdk-6u2-ea-bin-b02-linux-i586-12_apr_2007.bin 58281121 RMD160 8c692ddb81be02f0b2cff86da0b4dfa5126d627d SHA1 54f6321caeaa99b7f8c2ba8eb3b3c0336cb9f0d2 SHA256 71ba3a65a7412c9c9f2039f60de374cf8bc21ab785423b6873643d010faf0be1
 DIST jdk-7-ea-bin-b12-linux-amd64-06_may_2007.bin 56279213 RMD160 a585803d07b12eee41846d1151c471f1dd8ed2be SHA1 6a9553762dfd63ae3120720b74237cb27fe415fe SHA256 7726b056e0c82a6af740a0ab53f5b5310163ff53a8c58257ab8df71af71ce562
 DIST jdk-7-ea-bin-b12-linux-i586-06_may_2007.bin 62895264 RMD160 6a0b05dc1640976fc7814065e0c0aea45b411c77 SHA1 34dbabf4e8dc8c88de989db9ee312bd174c4f4f3 SHA256 4f93447207c23170d994c6221aa6dcb0378b159dfb4b32f27ba4a0c7e411bb31
-EBUILD sun-jdk-1.6.0.02_alpha02.ebuild 5272 RMD160 2502bf64230601346ac0935c9ae80edbef8b21b5 SHA1 bf66b8d2e925c8414a547afea952256c49577886 SHA256 d565a16a4d28ac6bb1b94a99c559ea2d11ba9bf9c8f99ff70d9390a5600c9158
-EBUILD sun-jdk-1.7.0.0_alpha12.ebuild 5465 RMD160 f3b949ca864a0934da31166403f040db6765e6f1 SHA1 b33d136785df8303c1a0f00298b3d3e9547ce247 SHA256 64dda778e7be7b95642b1188c0245e6ca74322d3308167cfd69c034fcb3cc707
-MISC ChangeLog 4135 RMD160 1855b8a9397426c8d99214e232c0d7d37fff8345 SHA1 8d959834e5fe7a56a347e744a1d2a17a091331d0 SHA256 92bb20b368f6777d612a7756bca1fc3cfcd049d5d479f6bbed9f5f09fe4b0e9a
+EBUILD sun-jdk-1.6.0.02_alpha02.ebuild 5135 RMD160 6acb769ac21f6aadf987cdfd48e52bc0e7b9721c SHA1 03356e52da8a2aca130556f1e2328e7550354f4b SHA256 26b0dfa2702e5178d2cfcac3bf89252bb1f920ec6535362939bd4b3e6056d1d5
+EBUILD sun-jdk-1.7.0.0_alpha12.ebuild 5433 RMD160 1b838d62bce60ed452381679af0e43dc5386f960 SHA1 0852ffa65cf94a9d38420caf092fc90c4d1904e7 SHA256 d16465ffb09e55f424ef2eb47e093e8a6e8bbccfbddf67b3a09b2a11566a0057
+MISC ChangeLog 4331 RMD160 cc0623fa70cfce0f513a2dce09285681253fe399 SHA1 0cc55bd3a23666b63871284257aa825018ff5ea9 SHA256 80a7ad8b0e581bf4364402fc2c3e10d0bb746c19d697a1186051e76f17d73661
